<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_details"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/details_checked"
        android:title="@string/details"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_icons"
        android:checkable="true"
        android:checked="false"
        android:icon="@drawable/icons"
        android:title="@string/icons"
        app:showAsAction="always" />
</menu>