<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/def_indent"
        android:text="@string/classes"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/title_size"
        app:layout_constraintBottom_toBottomOf="@id/tv_count"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/def_indent"
        android:textColor="@color/gray"
        android:textSize="@dimen/label_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/classes_format" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/def_indent"
        android:layout_marginTop="@dimen/mini_indent"
        android:layout_marginEnd="@dimen/def_indent"
        android:layout_marginBottom="@dimen/def_indent"
        app:cardBackgroundColor="@color/card_bg"
        app:cardCornerRadius="@dimen/radius"
        app:layout_constraintTop_toBottomOf="@id/tv_count">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/def_indent"
                android:background="@drawable/icon_background"
                android:padding="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/books" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/def_indent"
                android:layout_marginTop="@dimen/mini_indent"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/title_size"
                app:layout_constraintStart_toEndOf="@id/iv_icon"
                app:layout_constraintTop_toTopOf="@id/iv_icon"
                tools:text="Lesson" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/def_indent"
                android:layout_marginBottom="@dimen/mini_indent"
                android:textColor="?attr/colorFaded"
                android:textSize="@dimen/label_size"
                app:layout_constraintBottom_toBottomOf="@id/iv_icon"
                app:layout_constraintStart_toEndOf="@id/iv_icon"
                tools:text="@string/time_format" />

            <LinearLayout
                android:id="@+id/p_link"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="?attr/colorLink"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="16dp"
                    android:rotation="90"
                    android:text="@string/open_in"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:rotation="90"
                    android:src="@drawable/camera" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>